API/LaunchTemplate_resource.yaml
LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
        LaunchTemplateName: !Sub StackApiTemplate-${Environment}
        LaunchTemplateData:
            ImageId: ami-0ae8f15ae66fe8cda
            DisableApiTermination: true
            KeyName: stack-api
            IamInstanceProfile:
                Arn: !GetAtt LaunchTemplateProfile.Arn
            SecurityGroupIds:
                - !GetAtt LaunchTemplateSecurityGroup.GroupId

LaunchTemplateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
        GroupName: !Sub LaunchTemplateSecurityGroup-${Environment}
        GroupDescription: !Sub ${Environment} Launch template Security Group
        SecurityGroupIngress:
            - CidrIp: 0.0.0.0/0
              IpProtocol: tcp
              FromPort: 3000
              ToPort: 3000
            - CidrIp: 0.0.0.0/0
              IpProtocol: tcp
              FromPort: 80
              ToPort: 80
            - CidrIp: 0.0.0.0/0
              IpProtocol: tcp
              FromPort: 443
              ToPort: 443
        VpcId: !Ref VPC

LaunchTemplateProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
        Roles:
            - !Ref LaunchTemplateProfileRole

LaunchTemplateProfileRole:
    Type: AWS::IAM::Role
    Properties:
        AssumeRolePolicyDocument:
            Version: '2012-10-17'
            Statement:
                - Effect: Allow
                  Principal:
                      Service: ec2.amazonaws.com
                  Action:
                      - sts:AssumeRole
        ManagedPolicyArns:
            - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
            - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
            - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforAWSCodeDeploy
        Policies:
            - PolicyName: permissions
              PolicyDocument:
                  Version: '2012-10-17'
                  Statement:
                      - Effect: Allow
                        Action:
                            - cognito-idp:*
                        Resource: '*'
                      - Effect: Allow
                        Action:
                            - s3:PutObject
                            - s3:GetObject
                            - s3:DeleteObject
                            - s3:GetObjectTagging
                            - s3:PutObjectTagging
                        Resource: !Sub ${FilesS3Bucket.Arn}/*
                      - Effect: Allow
                        Action:
                            - ses:*
                        Resource: '*'
                      - Effect: Allow
                        Action:
                            - quicksight:GenerateEmbedUrlForRegisteredUser
                        Resource: '*'
